# url_shortener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FEATURES_EXPERIMENTAL_GUIDE.md  MIGRATION_GUIDE_VI.md  README.md  README2.md  REDIS_DEADPOOL_GUIDE.md  api-tests.http  basic_exercises.md  crud_exercises.md  docker-compose.yml  more_basic_exercises.md  readme_full_update_27032026.md  sql_commands.md  technical_explanation.md  test_api.http
migrations/: 20260207014058_init_db.down.sql  20260207014058_init_db.up.sql  20260207014823_add_refresh_tokens.up.sql  20260326000000_extend_short_code.down.sql  20260326000000_extend_short_code.up.sql  20260327000000_unique_owner_url.down.sql  20260327000000_unique_owner_url.up.sql  20260327001000_unique_owner_url_active.down.sql  20260327001000_unique_owner_url_active.up.sql  20260422010000_add_link_expires_at.up.sql  20260424000000_add_link_expires_at.down.sql  20260424000000_add_link_expires_at.up.sql  README.md
scripts/: run_api_batch_curl.ps1  run_api_phase1_prepare_data.ps1  run_api_phase2_redirect_delete.ps1  seed.sql
src/: README.md  db.rs  docs.rs  error.rs  main.rs  state.rs
src/dtos/: claims.rs  link.rs  mod.rs  user.rs
src/handlers/: admin_handler.rs  demo_handler.rs  health_handler.rs  link_handler.rs  mod.rs  user_handler.rs
src/middleware/: admin_middleware.rs  auth_middleware.rs  mod.rs  rate_limit_middleware.rs
src/models/: link.rs  link_analytics.rs  mod.rs  refresh_tokens.rs  user.rs
src/repositories/: link_repository.rs  mod.rs  user_repository.rs
src/routes/: admin_route.rs  demo_route.rs  health_route.rs  link_route.rs  mod.rs  user_route.rs
src/services/: auth_service.rs  cache_service.rs  link_service.rs  mod.rs  user_service.rs
src/utils/: jwt.rs  mod.rs  validation.rs
url_shortener_demo/: Cargo.toml  test_api.http
url_shortener_demo/src/: config.rs  error.rs  main.rs  models.rs  state.rs
url_shortener_demo/src/handlers/: mod.rs  redirect_handler.rs  url_handler.rs
url_shortener_demo/src/services/: base62.rs  cache_service.rs  mod.rs  url_service.rs
url_shortener_demo/static/: app.js  index.html  style.css
