[dependencies]
# Web framework hiệu năng cao
axum = "0.7"
# Runtime xử lý bất đồng bộ (Async) cực mạnh cho High Load
tokio = { version = "1.0", features = ["full"] }
# Thư viện kết nối PostgreSQL (có hỗ trợ compile-time check)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
# Thư viện kết nối Redis để redirect cực nhanh
redis = { version = "0.24", features = ["tokio-comp"] }
# Xử lý dữ liệu JSON cho API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Xử lý thời gian
chrono = { version = "0.4", features = ["serde"] }