[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework hiệu năng cao
axum = "0.8.8"

# Runtime xử lý bất đồng bộ (Async) cực mạnh cho High Load
tokio = { version = "1.0", features = ["full"] }

# Thư viện kết nối PostgreSQL
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

# Hash password
bcrypt = "0.15"

# Thư viện kết nối Redis để redirect cực nhanh
deadpool-redis = "0.14"

# Load file .env để bảo mật cấu hình
dotenvy = "0.15"

# Xử lý dữ liệu JSON cho API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Xử lý thời gian
chrono = { version = "0.4", features = ["serde"] }

# Error handling với derive macros
thiserror = "2.0"

# Serve static files cho frontend
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

jsonwebtoken = "9"
url = "2.5"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
